// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MidItems (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "purple",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "brown",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`MidItems (with brown item) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "purple",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "brown",
          "borderColor": "brown",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`MidItems (with purple and brown items) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "purple",
          "borderColor": "purple",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "brown",
          "borderColor": "brown",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`MidItems (with purple item) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "purple",
          "borderColor": "purple",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "brown",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;
